--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "formidable": "^1.2.2",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -14,6 +15,7 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "@types/formidable": "^1.0.31",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
