--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-dropzone": "^11.0.1",
-    "styled-components": "^5.0.0"
+    "react-dropzone": "^11.1.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/formidable": "^1.0.31",
-    "@types/node": "12.0.12",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
-    "@types/styled-components": "5.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "3.5.2"
+    "@types/node": "^12.12.57",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.3",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.2"
   },
   "license": "ISC"
 }
