--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^7.20.0",
+    "firebase": "^7.21.0",
     "next": "^9.5.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-dropzone": "^11.1.0",
+    "react-dropzone": "^11.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@types/node": "^12.12.57",
+    "@types/node": "12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   },
   "license": "ISC"
 }
