--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^7.21.0",
+    "firebase": "^7.21.1",
     "next": "^9.5.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-dropzone": "^11.2.0",
+    "react-firebaseui": "^4.1.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
