--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "firebase": "^7.21.1",
     "next": "^9.5.3",
+    "pdf-lib": "^1.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-dropzone": "^11.2.0",
