--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^16.13.0",
     "react-dropzone": "^11.2.0",
     "react-firebaseui": "^4.1.0",
+    "react-pdf": "^5.0.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-pdf": "^4.0.6",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
     "typescript": "^4.0.3"
