--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "firebase": "^7.23.0",
+    "jotai": "^0.9.2",
     "next": "^9.5.4",
     "p-limit": "^3.0.2",
     "pdf-lib": "^1.11.1",
