--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^9.5.5",
     "@types/node": "12.12.62",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
