--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^7.23.0",
+    "firebase": "^8.0.0",
     "jotai": "^0.10.0",
-    "next": "^9.5.5",
+    "next": "^10.0.0",
     "p-limit": "^3.0.2",
     "pdf-lib": "^1.11.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.0",
     "react-firebaseui": "^4.1.0",
     "react-pdf": "^5.0.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^9.5.5",
-    "@types/node": "12.12.62",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
+    "@next/bundle-analyzer": "^10.0.0",
+    "@types/node": "^14.14.5",
+    "@types/react": "^16.9.54",
+    "@types/react-dom": "^16.9.9",
     "@types/react-pdf": "^4.0.6",
     "@types/styled-components": "^5.1.3",
     "babel-plugin-styled-components": "^1.11.1",
