--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.4.0",
     "firebase": "^7.24.0",
     "jotai": "^0.10.0",
     "next": "^10.0.0",
