--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
     "firebase": "^7.24.0",
+    "framer-motion": "^2.9.4",
     "jotai": "^0.10.0",
     "next": "^10.0.0",
     "p-limit": "^3.0.2",
