--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/vision": "^2.1.2",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0"
   },
