--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^8.2.0",
     "framer-motion": "^2.9.5",
     "jotai": "^0.11.3",
+    "jszip": "^3.5.0",
     "next": "^10.0.3",
     "p-limit": "^3.1.0",
     "pdf-lib": "^1.13.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^10.0.3",
+    "@types/file-saver": "^2.0.1",
     "@types/node": "^12.19.9",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
