--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/vision": "^2.1.2",
+    "algoliasearch": "^4.8.3",
     "firebase-admin": "^9.4.1",
     "firebase-functions": "^3.11.0"
   },
