Update app dependencies

--- a/app/package.json
+++ b/app/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
+    "algoliasearch": "^4.8.3",
     "file-saver": "^2.0.5",
-    "firebase": "^8.2.0",
+    "firebase": "^8.2.1",
     "framer-motion": "^2.9.5",
     "jotai": "^0.11.3",
     "jszip": "^3.5.0",
-    "next": "^10.0.3",
+    "next": "^10.0.4",
     "p-limit": "^3.1.0",
-    "pdf-lib": "^1.13.0",
+    "pdf-lib": "^1.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.0",
@@ -28,13 +29,13 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.3",
+    "@next/bundle-analyzer": "^10.0.4",
     "@types/file-saver": "^2.0.1",
-    "@types/node": "^12.19.9",
+    "@types/node": "^12.19.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-pdf": "^5.0.0",
-    "@types/styled-components": "^5.1.5",
+    "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "typescript": "^4.1.3"
   },
