--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.2.1",
     "framer-motion": "^3.1.1",
+    "fuse.js": "^6.4.6",
     "jotai": "^0.12.2",
     "jszip": "^3.5.0",
     "next": "^10.0.4",
