--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
   "engines": {
     "node": "12"
   },
+  "license": "MIT",
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/vision": "^2.1.2",
