--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.0",
+    "react-is": "^17.0.2",
     "react-pdf": "^5.1.0",
     "styled-components": "^5.2.0"
   },
