--- a/app/package.json
+++ b/app/package.json
@@ -7,24 +7,26 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "npm -v && node -v && next build",
+    "lint": "next lint",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@svgr/webpack": "^5.4.0",
+    "@svgr/webpack": "^5.5.0",
     "algoliasearch": "^4.8.4",
     "date-fns": "^2.21.3",
     "file-saver": "^2.0.5",
     "firebase": "^8.2.6",
     "framer-motion": "^4.1.11",
     "fuse.js": "^6.4.6",
-    "jotai": "^0.16.3",
+    "jotai": "^1.0.0",
     "jszip": "^3.5.0",
-    "next": "^10.0.6",
+    "next": "^11.0.0",
+    "next-images": "^1.8.1",
     "p-limit": "^3.1.0",
     "pdf-lib": "^1.16.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.0",
     "react-firebase-hooks": "^3.0.4",
     "react-is": "^17.0.2",
@@ -32,7 +34,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^10.0.6",
+    "@next/bundle-analyzer": "^11.0.0",
     "@types/file-saver": "^2.0.1",
     "@types/node": "^14.14.44",
     "@types/react": "^17.0.5",
@@ -40,6 +42,8 @@
     "@types/react-pdf": "^5.0.1",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
     "typescript": "^4.1.3"
   },
   "license": "MIT"
